# meal-planner

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.json
.cline/planner/: SKILL.md
.design-sync/: NOTES.md  config.json  conventions.md  north-star.md
.design-sync/check/: baseline.json  ds-check.mjs  ds-check.test.mjs  gate.test.mjs  review-stamp.json
.design-sync/previews/: Button.tsx  Card.tsx  Dialog.tsx  DialogClose.tsx  DialogContent.tsx  DialogDescription.tsx  DialogTitle.tsx  DialogTrigger.tsx  ErrorBanner.tsx  Spinner.tsx  Table.tsx
docs/: cli-reference.md  design-tokens.md  ui-component-research.md
plan/: 2026-06-22-preferences-ui.md  init-prompt.md
plan/fast-api/: plan.md
plan/grocery-input-parse/: plan.md
plan/web-frontend/: plan.md
src/: server.py
supabase/: README.md  config.toml
tests/: conftest.py  test_add_saved_meal.py  test_calculate_exercise_calories.py  test_calculate_tdee.py  test_cli_groceries.py  test_confidence.py  test_exercise_presets.py  test_exercise_storage.py  test_food_processor.py  test_generate_plan.py  test_generate_plan_inventory.py  test_generation.py  test_grocery_inventory.py  test_integration.py  test_llm_agent.py  test_load_saved_meals.py  test_meal_recipes_data.py  test_preference_normalizer.py  test_recipe_format.py  test_search_meals.py  test_server_groceries.py  test_state_persistence.py  test_update_state.py
web/: .env.example  index.d.ts  package-lock.json  package.json  tsconfig.dts.json  tsconfig.json  vite.config.ts
(+133 files in other folders)
