[project]
name = "meal-planner"
version = "0.1.0"
description = "AI-driven meal planning assistant with MCP integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=1.0.0",
    "pytest>=8.0.0",
    "httpx2>=2.0.0",
    "google-genai>=1.0.0",
    "pydantic>=2.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
